--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
 	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
-    "mongodb": "0.9.x",
+    "async": "0.1.x",
+    "coffee-script": "1.1.x",
+    "jshint": "0.5.x",
+		"underscore": "1.2.x",
     "validator": "0.2.x",
 		"vows": "0.5.x",
-		"winston": "0.5.x",
-		"underscore": "1.2.x"
 	}
 }
